--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "normalize.css": "^8.0.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-flexbox-grid": "^2.1.2",
     "react-scripts": "2.1.2",
     "react-scrolllock": "^3.0.2",
     "rss-to-json": "^1.0.4",
