initial work for player, start work on improved version

--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "body-scroll-lock": "^2.6.1",
     "normalize.css": "^8.0.1",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
+    "react": "next",
+    "react-audio-player": "^0.11.0",
+    "react-dom": "next",
     "react-flexbox-grid": "^2.1.2",
     "react-scripts": "2.1.2",
     "react-scrolllock": "^3.0.2",
