--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.15.0",
     "axios": "^0.18.0",
     "body-scroll-lock": "^2.6.1",
     "normalize.css": "^8.0.1",
@@ -10,6 +11,7 @@
     "react-audio-player": "^0.11.0",
     "react-dom": "next",
     "react-flexbox-grid": "^2.1.2",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.2",
     "react-scrolllock": "^3.0.2",
     "rss-to-json": "^1.0.4",
