--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.2",
     "react-scrolllock": "^3.0.2",
+    "react-spinners": "^0.5.3",
     "rss-to-json": "^1.0.4",
     "vh-for-mobile": "^1.0.1"
   },
