--- a/package.json
+++ b/package.json
@@ -3,18 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "animated": "^0.2.2",
     "antd": "^3.15.0",
     "axios": "^0.18.0",
     "body-scroll-lock": "^2.6.1",
+    "group": "^1.0.2",
     "normalize.css": "^8.0.1",
     "react": "next",
-    "react-audio-player": "^0.11.0",
+    "react-audio-player": "0.11.0",
     "react-dom": "next",
     "react-flexbox-grid": "^2.1.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.2",
     "react-scrolllock": "^3.0.2",
     "react-spinners": "^0.5.3",
+    "react-transition-group": "^2.6.0",
     "rss-to-json": "^1.0.4",
     "vh-for-mobile": "^1.0.1"
   },
