--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.19",
+    "@fortawesome/free-solid-svg-icons": "^5.9.0",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "animated": "^0.2.2",
     "antd": "^3.15.0",
     "axios": "^0.18.0",
     "body-scroll-lock": "^2.6.1",
     "group": "^1.0.2",
+    "node-sass": "^4.12.0",
     "normalize.css": "^8.0.1",
     "react": "next",
     "react-audio-player": "0.11.0",
@@ -17,9 +21,12 @@
     "react-scripts": "2.1.2",
     "react-scrolllock": "^3.0.2",
     "react-spinners": "^0.5.3",
+    "react-svg-textures": "^1.4.7",
     "react-transition-group": "^2.6.0",
     "rss-to-json": "^1.0.4",
-    "vh-for-mobile": "^1.0.1"
+    "textures": "^1.2.0",
+    "vh-for-mobile": "^1.0.1",
+    "video.js": "^7.5.5"
   },
   "scripts": {
     "start": "react-scripts start",
